# bombadil

./: .envrc  .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  COMPARISON.md  Cargo.toml  IMPLEMENTATION_PLAN.md  ISSUE.md  MAIN_COMPARISON.md  PATTERNS.md  PROMPT_build.md  PROMPT_plan.md  PROMPT_security.md  README.md  SECURITY.md  SECURITY_ANALYSIS.md  SYNTHESIS.md  TODO.md  default.nix  flake.nix  loop.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: TODO.md  contributing.md
docs/development/: contributing.md
docs/manual/: .envrc  Makefile  README.md  default.nix
experiments/trace-graph/: d3_dag.py  dot.py  flake.nix
nix/: Cargo.nix  default.nix  docker.nix  executable.nix
src/: browser.rs  geometry.rs  instrumentation.rs  main.rs  runner.rs  state_machine.rs  tree.rs  url.rs
src/browser/: actions.rs  actions.ts  evaluation.rs  instrumentation.rs  keys.rs  random.rs  state.rs
src/instrumentation/: html.rs  js.rs
src/snapshots/: antithesis_browser__instrumentation__tests__instrument_source_code_if.snap  antithesis_browser__instrumentation__tests__instrument_source_code_if_else.snap  antithesis_browser__instrumentation__tests__instrument_source_code_switch.snap  antithesis_browser__instrumentation__tests__instrument_source_code_ternary.snap  antithesis_browser__instrumentation__tests__instrument_source_code_ternary_assignment.snap  antithesis_browser__instrumentation__tests__instrument_source_code_ternary_comma_operator.snap
src/specification/: bombadil_exports.rs  extractors.rs  index.ts  js.rs  (+5 more)
tests/: integration_tests.rs
(+60 files in other folders)
