[package]
name = "antithesis_browser"
version = "0.1.0"
edition = "2024"
exclude = []

[[bin]]
name = "antithesis_browser"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
chromiumoxide = "0.8.0"
clap = { version = "4.5.46", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
hegel = { path = "../star/hegel/sdks/rust" }
http = "1.4.0"
include_dir = "0.7.4"
log = "0.4.29"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version =  "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.22.0"
tokio = "1.48.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
url = "2.5.7"

[dev-dependencies]

[build-dependencies]
